Fixed intro formatting on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -819,6 +819,10 @@ select:-webkit-autofill:focus {
   margin-top: 6rem;
 }
 
+#intro .title {
+  margin-top: 0;
+}
+
 .intro-text,
 .about-p {
   font-family: "Open Sans", sans-serif;
